# scfm-controlled-manipulations

./: .gitignore  Makefile  README.md  Untitled  pyproject.toml
.devcontainer/: devcontainer.json
configs/: default.yaml  example.yaml
data/dashboard_bundles/atlases__arterial/: manifest.json  summary.json
data/dashboard_bundles/atlases__brain/: manifest.json  summary.json
data/dashboard_bundles/atlases__immune/: manifest.json  summary.json
data/dashboard_bundles/atlases__lung/: manifest.json  metrics.parquet  summary.json
data/dashboard_bundles/atlases__retina/: manifest.json  summary.json
data/dashboard_bundles/atlases__tabula_sapiens/: manifest.json  metrics.parquet  summary.json
data/dashboard_bundles/dendritic_cells/: manifest.json  metrics.parquet  summary.json
data/dashboard_bundles/sceval__cell_lines/: manifest.json  summary.json
data/dashboard_bundles/sceval__dendritic_cells/: manifest.json  metrics.parquet  summary.json
data/dashboard_bundles/sceval__human_pbmc/: manifest.json  summary.json
data/dashboard_bundles/sceval__immune_all_human/: manifest.json  summary.json
data/dashboard_bundles/sceval__pancrm/: manifest.json  metrics.parquet  summary.json
data/dashboard_bundles/sceval__pbmc_368k/: manifest.json  summary.json
metrics_dashboard/: Home.py  README.md  bootstrap.py  pyproject.toml  requirements.txt
metrics_dashboard/.streamlit/: config.toml
metrics_dashboard/metrics_dashboard/: __init__.py  bundle.py  catalog.py  config.py  dashboard_filters.py  filters.py  load.py  obs_columns.py  plot_display.py  plot_helpers.py  plotly_charts.py  plots.py  runtime.py  sections.py  state.py  style.py  sweep_axis.py  transforms.py  ui.py
metrics_dashboard/pages/: 1_Explore.py  1_Metrics.py  2_Compare.py  2_Dataset_Summary.py  3_Model_Card.py  4_Dataset_Summary.py
notebooks/: 1-datasets.py  2-validate-interventions.py  3-analyze-metrics.py  3-evaluation-metrics.py  3.0-synthetic-metric-validation.py  3.1-neighbourhood-metrics.py  3.3-synthetic-experiments.py  3.4-viscore.py  3.5-trajectory-metrics.py  4-dataset-size.py  5-scib-correlation.py  5.1-investigate-null-divergence.py  6-model-patterns.py  7-dataset-patterns.py
scfm_controlled_manipulations/: base.py  compute_env.py  embed_input_validation.py  fm_gene_resolver.py  io.py  obs_columns.py  pipeline.py  qc.py  sweep_config.py
scfm_controlled_manipulations/evaluation/: __init__.py  context.py  data.py  disk_cache.py  intervention_job.py  knn_cache.py  leiden_cache.py  metrics_cell_batch.py  metrics_clustering.py  metrics_common.py  metrics_knn.py  metrics_neighborhood_preservation.py  metrics_stats_shift.py  metrics_structure.py  metrics_trajectory.py  pool.py  reference_prep.py  reference_stats_shift.py  run.py  run_scib.py  run_trajectory.py  worker.py
scfm_controlled_manipulations/interventions/: __init__.py  downsample.py  gene_dropout.py  gene_shuffle.py  local_smoothing.py  poisson_resampling.py
scfm_controlled_manipulations/metrics/: __init__.py  distortion.py
scripts/: run_generated_evaluations.sh
tests/: test_cellcount_stability.py  test_context_loading.py  test_dashboard_bundle.py  test_dashboard_transforms.py  test_embed_input_validation.py  test_evaluation_unit.py  test_obs_columns.py  test_parallel_infra.py  test_set3_and_sweep_axis.py
