[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "scfm_controlled_manipulations"
version = "0.0.1"
description = "Evaluating single-cell foundation model representations through controlled cellular interventions."
authors = [
  { name = "Ahmed Sallam" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "anndata",
    "igraph>=1.0.0",
    "ipython",
    "jupyterlab",
    "leidenalg>=0.11.0",
    "marimo>=0.23.5",
    "matplotlib",
    "mygene",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pyensembl>=2.3.13",
    "pyarrow",
    "python-dotenv",
    "pyyaml",
    "ruff",
    "scanpy",
    "scib-metrics",
    "scikit-dimension>=0.3.4",
    "scikit-learn",
    "scikit-misc>=0.5.2",
    "viscore @ git+https://github.com/saeyslab/ViScore.git",
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["scfm_controlled_manipulations"]
include = ["pyproject.toml", "scfm_controlled_manipulations/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["scfm_controlled_manipulations"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
# BLAS thread env must be set before numpy/scipy import (anndata/scanpy).
"scfm_controlled_manipulations/pipeline.py" = ["E402"]
"scfm_controlled_manipulations/evaluation/run.py" = ["E402"]
"scfm_controlled_manipulations/evaluation/run_scib.py" = ["E402"]

